# pinyin_regex

./: .gitignore  .opencodeignore  AGENTS.md  README.md  TODO.md  pinyin_reg.ipynb  pyproject.toml  test_pinyin_regex.py  user_test.ipynb
candidates/: README.md  test_complex_combination.txt
candidates/reviewed/: test_boundary_special.txt
docs/: usage.md
examples/: demo.py  performance_demo.py
examples/basic/: demo.py
examples/debug/: debug_demo.py  debug_test.py  test_graphviz.py
examples/performance/: performance_demo.py
pinyin_regex/: __init__.py  debug.py  engine.py  errors.py  parser.py  pinyin_utils.py
tests/: test_debug.py  test_engine.py
